# conduit

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
conduit-api/: Cargo.toml
conduit-api/config/graph/: advisory_acknowledged.graphql  advisory_raised.graphql  advisory_resolved.graphql  annotation_added.graphql  dependency_declared.graphql  dependency_removed.graphql  environment_added.graphql  environment_removed.graphql  system_decommissioned.graphql  system_registered.graphql  system_updated.graphql
conduit-api/config/json/: advisory_acknowledged.schema.json  advisory_raised.schema.json  advisory_resolved.schema.json  annotation_added.schema.json  dependency_declared.schema.json  dependency_removed.schema.json  environment_added.schema.json  environment_removed.schema.json  system_decommissioned.schema.json  system_registered.schema.json  system_updated.schema.json
conduit-api/src/: main.rs
conduit-consumer/: Cargo.toml
conduit-consumer/src/: main.rs
terraform/aws/: ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/azure/: .terraform.lock.hcl  acr.tf  container_app.tf  main.tf  network.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf
